# boxer_simulator

./: README.md
boxer_gazebo/: CHANGELOG.rst  package.xml
boxer_gazebo/launch/: boxer_world.launch  spawn_boxer.launch
boxer_gazebo/scripts/: boxer_base_sim
boxer_simulator/: CHANGELOG.rst  package.xml
cpr_plugin_tools/: CHANGELOG.rst  CMakeLists.txt  package.xml
cpr_plugin_tools/include/cpr_plugin_tools/: cpr_plugin_tools.h
